--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "prettier": "2.8.8",
     "style-loader": "^3.3.3",
     "webpack": "^5.83.1",
-    "webpack-cli": "^5.1.1"
+    "webpack-cli": "^5.1.1",
+    "webpack-dev-server": "^4.15.0"
+  },
+  "dependencies": {
+    "date-fns": "^2.30.0"
   }
 }
